@@ -33,3 +33,4 @@ org.snipsnap.snip.filter.macro.SnipCountMacro
 org.snipsnap.snip.filter.macro.HelloWorldMacro
 org.snipsnap.snip.filter.macro.AnchorMacro
 org.snipsnap.snip.filter.macro.FilePathMacro
+org.snipsnap.snip.filter.macro.RfcMacro
