@@ -1,5 +1,9 @@
 0.3.3
 
+- Fixed bug: RSS feed truncated entities, e.g. &x32...
+- Added feature: RFC macro {rfc:123} or {rfc:123|Great RFC} links to RFCs
+- Fixed bug: RSS was accidently refactored and didn't work
+- Added feature: "Recently changed" links comments to threads, not to individual posts
 - Fixed bug: always find Java under MacOS X (no need for JAVA_HOME setting)
 - Added feature: Increase and decrease the shown month in the calendar view
 - Added feature: Calendar now displays correct day names with the correct locale
